@@ -57,12 +57,12 @@ Generate a unique temporary file name from @var{template}.
 @var{template} has the form:
 
 @example
-   <path>/ccXXXXXX<suffix>
+   @var{path}/ccXXXXXX@var{suffix}
 @end example
 
-@var{suffix_len} tells us how long <suffix> is (it can be zero
-length).  The last six characters of @var{template} before <suffix>
-must be @code{XXXXXX}; they are replaced with a string that makes the
+@var{suffix_len} tells us how long @var{suffix} is (it can be zero
+length).  The last six characters of @var{template} before @var{suffix}
+must be @samp{XXXXXX}; they are replaced with a string that makes the
 filename unique.  Returns a file descriptor open on the file for
 reading and writing.
 
